<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.william.firebase_auth_phone.MainActivity"
    android:orientation="vertical">

  <EditText
      android:id="@+id/id_Phone"
      android:layout_width="368dp"
      android:layout_height="wrap_content"
      android:hint="@string/number"
      android:textSize="20dp"
      tools:layout_editor_absoluteX="8dp"
      tools:layout_editor_absoluteY="0dp" />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/info1"/>

  <Button
      android:id="@+id/idButon_1"
      android:layout_width="88dp"
      android:layout_height="wrap_content"
      android:onClick="requestCode"
      android:text="@string/buton_1"
      tools:layout_editor_absoluteX="8dp"
      tools:layout_editor_absoluteY="78dp" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="368dp"
      android:layout_height="wrap_content"
      android:text="@string/info"
      tools:layout_editor_absoluteX="8dp"
      tools:layout_editor_absoluteY="45dp" />

  <EditText
        android:id="@+id/idCodigo"
        android:layout_width="368dp"
        android:layout_height="43dp"
        android:hint="@string/code"
        tools:layout_editor_absoluteY="136dp"
        tools:layout_editor_absoluteX="8dp" />

  <Button
      android:id="@+id/idBoton_2"
      android:layout_width="88dp"
      android:layout_height="wrap_content"
      android:onClick="signIn"
      android:text="@string/buton_2"
      tools:layout_editor_absoluteX="8dp"
      tools:layout_editor_absoluteY="189dp" />

</LinearLayout>
